# georoute

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
apps/server/: main.cpp
benchmarks/: CMakeLists.txt  bench_main.cpp  bench_routing.cpp
cmake/: Catch2.cmake
data/: sample_graph.json  sample_queries.json
demo/: demo.sh
docker/: Dockerfile.dev  Dockerfile.lambda
docs/: api.md  build.md  perf.md
include/georoute/: app.hpp  config.hpp  dijkstra.hpp  engine.hpp  graph.hpp  http_server.hpp  router.hpp  segment_tree.hpp  types.hpp
scripts/: run_local.sh
src/: app.cpp  config.cpp  dijkstra.cpp  engine.cpp  graph.cpp  http_server.cpp  lambda_handler.cpp  logging.cpp  main_cli.cpp  main_server.cpp  router.cpp  segment_tree.cpp
tests/: CMakeLists.txt  test_congestion_deterministic.cpp  test_dijkstra.cpp  test_engine.cpp  test_path_validity.cpp  test_placeholder.cpp  test_router.cpp  test_segment_tree.cpp
